--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@
   --clr-cyan: hsl(180, 62%, 55%);
   --clr-orange: hsl(34, 97%, 64%);
   --clr-blue: hsl(212, 86%, 64%);
+
+  --shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 body {
@@ -25,11 +27,11 @@ body {
 
 .container {
   margin: 0 auto;
-  padding: 2rem 1rem;
+  padding: clamp(1.5rem, 2vw, 3rem) 1rem;
 }
 
 .main-title {
-  font-size: 1.5rem;
+  font-size: clamp(1.3rem, 5vw, 2rem);
   line-height: 1.3;
 }
 
@@ -44,16 +46,16 @@ body {
 }
 
 .text {
-  max-width: 32ch;
+  max-width: clamp(28ch, 4vw + 28ch, 55ch);
   margin: 0 auto 2rem;
   color: var(--clr-grey);
   font-weight: 400;
 }
 
 .cards {
-  margin-block-start: 2.5rem;
+  margin-block-start: clamp(1.5rem, 4vw, 2.5rem);
   display: grid;
-  gap: 1.8rem;
+  gap: clamp(1rem, 3vw, 1.8rem);
 }
 
 .item {
@@ -62,8 +64,8 @@ body {
   background: var(--clr-white);
   border-top: 5px solid var(--border-color);
   border-radius: 0.5rem;
-  padding: 1.8rem 2rem;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  padding: clamp(1.2rem, 2vw, 1.8rem) clamp(1rem, 2vw, 2rem);
+  box-shadow: var(--shadow);
   text-align: start;
 }
 
@@ -86,13 +88,13 @@ body {
 .item h2 {
   color: var(--clr-dark);
   font-weight: 600;
-  margin-block-end: 0.5rem;
+  margin-block-end: 0.5rem
 }
 
 .item p {
   color: var(--clr-grey);
   font-size: 0.875rem;
-  margin-block-end: 2rem;
+  margin-block-end: clamp(1rem, 3vw, 2rem);
 }
 
 .item img {
@@ -101,10 +103,10 @@ body {
   align-self: flex-end;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 64em) {
   .container {
     max-width: min(90%, 75rem);
-    padding: 4rem 2rem;
+    padding: clamp(2.5rem, 5vw, 4rem) clamp(1rem, 3vw, 2rem);
   }
 
   .cards {
@@ -114,7 +116,7 @@ body {
       "one two four"
       "one three four"
     ;
-    gap: 2rem;
+    gap: clamp(1.2rem, 2vw, 2rem);
   }
 
   .one { 
