--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
 
 .container {
   margin: 0 auto;
-  padding: clamp(1.5rem, 2vw, 3rem) 1rem;
+  padding: clamp(1rem, 1rem + 0vw, 1rem);
 }
 
 .main-title {
@@ -47,7 +47,7 @@ body {
 
 .text {
   max-width: clamp(28ch, 4vw + 28ch, 55ch);
-  margin: 0 auto 2rem;
+  margin: 0 auto clamp(2rem, 2rem + 0vw, 2rem);
   color: var(--clr-grey);
   font-weight: 400;
 }
@@ -88,7 +88,7 @@ body {
 .item h2 {
   color: var(--clr-dark);
   font-weight: 600;
-  margin-block-end: 0.5rem
+  margin-block-end: clamp(0.5rem, 0.5rem + 0vw, 0.5rem);
 }
 
 .item p {
